--- a/Email/templates/base.html
+++ b/Email/templates/base.html
@@ -21,5 +21,7 @@
     <script>window.jQuery || document.write('<script src="{{ static('js/vendors/jquery-1.8.3.min.js') }}"><\/script>')</script>
 
     <script src="{{ static('js/vendors/bootstrap/bootstrap.min.js') }}"></script>
+    <script src="{{ static('js/main.js') }}"></script>
+
 </body>
 </html>
