--- a/Email/templates/base.html
+++ b/Email/templates/base.html
@@ -11,6 +11,7 @@
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="{{ static('css/bootstrap.min.css') }}">
     <link rel="stylesheet" href="{{ static('css/main.css') }}">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/jquery.bootstrapvalidator/0.5.2/css/bootstrapValidator.min.css"/>
 </head>
 <body>
 
@@ -18,8 +19,9 @@
     {% endblock %}
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="{{ static('js/vendors/jquery-1.8.3.min.js') }}"><\/script>')</script>
-
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery.bootstrapvalidator/0.5.2/js/bootstrapValidator.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.2/backbone-min.js"></script>
     <script src="{{ static('js/vendors/bootstrap/bootstrap.min.js') }}"></script>
     <script src="{{ static('js/main.js') }}"></script>
 
