--- a/Email/templates/email.html
+++ b/Email/templates/email.html
@@ -1,7 +1,6 @@
 {% extends 'base.html' %} {% block title %} Amazing Email Service in Python! {% endblock %} {% block body %}
 
-
-<nav class="navbar navbar-default navbar-static-top" role="navigation">
+<nav id="main" class="navbar navbar-default navbar-static-top" role="navigation">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#email-navbar-collapse-1">
@@ -12,50 +11,70 @@
             </button>
         </div>
         <div class="collapse navbar-collapse" id="email-navbar-collapse-1">
-            <div class="btn-compose pull-left">
-                <button class="btn btn-success btn-lg">
-                    <span class="glyphicon glyphicon-send"></span> Send
-                </button>
-            </div>
-
-            <div class="btn-group pull-right">
-                <button class="btn btn-default btn-lg dropdown-toggle" type="button" data-toggle="dropdown">
+            <div class="btn-group pull-left">
+                <button class="btn btn-info dropdown-toggle" type="button" data-toggle="dropdown">
                     Email Service Options
                     <span class="caret"></span>
                 </button>
                 <ul class="dropdown-menu" role="menu">
-                  <li>SendGrid</li>
-                  <li>Some Other</li>
-                  <li>SendGrid Failover to Some Other</li>
-                  <li>Some Other Failover to SendGrid</li>
+                    <li role="presentation">
+                        <a role="menuitem" tabindex="-1" href="#">Random</a>
+                    </li>
+                    <li role="presentation">
+                        <a role="menuitem" tabindex="-1" href="#">Mandrill</a>
+                    </li>
+                    <li role="presentation">
+                        <a role="menuitem" tabindex="-1" href="#">SendGrid</a>
+                    </li>
+                    <li role="presentation">
+                        <a role="menuitem" tabindex="-1" href="#">SendGrid</a>
+                    </li>
                 </ul>
             </div>
         </div>
 
     </div>
 </nav>
+<form id="email-form" method="post">
+    <div class="container">
+        <div class="content-container clearfix">
+            
+            <h1 class="content-title">Compose</h1>
+            
+            <div class="col-md-12">
 
-<div class="container">
-    <div class="content-container clearfix">
-        <h1 class="content-title">Compose</h1>
-        <div class="col-md-12">
-            <div class="form-group">
-                <input id="tokenfield" type="text" class="form-control" placeholder="To" />
-            </div>
-            <div class="form-group">
-                <input type="text" class="form-control" placeholder="Cc" />
-            </div>
-            <div class="form-group">
-                <input type="text" class="form-control" placeholder="Bcc" />
-            </div>
-            <div class="form-group">
-                <input type="text" class="form-control" placeholder="Subject" />
-            </div>
-            <textarea class="form-control" placeholder="message"></textarea>
-            <div class="btn-send">
+                <div class="form-group">
+                    <input type="text" class="form-control" name="from-email" id="from-input" placeholder="From" />
+                </div>
+
+                <div class="form-group">
+                    <input type="text" class="form-control" name="to-email" id="to-input" placeholder="To" />
+                </div>
+
+                <div class="form-group">
+                    <input type="text" class="form-control" name="cc-email" id="cc-input" placeholder="Cc" />
+                </div>
+
+                <div class="form-group">
+                    <input type="text" class="form-control" name="bcc-email" id="bcc-input" placeholder="Bcc" />
+                </div>
+
+                <div class="form-group">
+                    <input type="text" class="form-control" name="subject" id="subject-input" placeholder="Subject" />
+                </div>
+
+                <div class="form-group">
+                    <textarea class="form-control" placeholder="Message" name="message" id="message-input"></textarea>
+                </div>
+
+                <div class="form-group">
+                    <button class="btn btn-success sendEmail">
+                        <span class="glyphicon glyphicon-send"></span> Send
+                    </button>
+                </div>
+
             </div>
         </div>
     </div>
-</div>
-
+</form>
 {% endblock %}
