--- a/Email/templates/index.html
+++ b/Email/templates/index.html
@@ -1,37 +1,80 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %} {% block title %} Amazing Email Service in Python! {% endblock %} {% block body %}
 
-{% block title %}
-Amazing Email Service in Python!
-{% endblock %}
+<nav id="main" class="navbar navbar-default navbar-static-top" role="navigation">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#email-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+        </div>
+        <div class="collapse navbar-collapse" id="email-navbar-collapse-1">
+            <div class="btn-group pull-left">
+                <button class="btn btn-info dropdown-toggle" type="button" data-toggle="dropdown">
+                    Email Service Options
+                    <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu" role="menu">
+                    <li role="presentation">
+                        <a role="menuitem" tabindex="-1" href="#">Random</a>
+                    </li>
+                    <li role="presentation">
+                        <a role="menuitem" tabindex="-1" href="#">Mandrill</a>
+                    </li>
+                    <li role="presentation">
+                        <a role="menuitem" tabindex="-1" href="#">SendGrid</a>
+                    </li>
+                    <li role="presentation">
+                        <a role="menuitem" tabindex="-1" href="#">SendGrid</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
 
-{% block body %}
-
-<div class="container" style="margin-top:50px">
-
-<div class="btn-group">
-  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-    Action <span class="caret"></span>
-  </button>
-  <ul class="dropdown-menu" role="menu">
-    <li><a href="#">Action</a></li>
-    <li><a href="#">Another action</a></li>
-    <li><a href="#">Something else here</a></li>
-    <li class="divider"></li>
-    <li><a href="#">Separated link</a></li>
-  </ul>
-</div>
-
-    <div class="hero-unit">
-        <h1>Wotcha!</h1>
-        <p>You now have</p>
-        <ul>
-        	<li>A basic Flask app structure</li>
-            <li>HTML5 Boilerplate</li>
-            <li>Twitter Bootstrap</li>
-            <li>Twitter Bootstrap plugins</li>
-        </ul>
-        <p>installed.</p>
-        <h3>Enjoy coding! - Yeoman (and @romain__berger :p )</h3>
     </div>
-</div>
+</nav>
+<form id="email-form" method="post">
+    <div class="container">
+        <div class="content-container clearfix">
+            
+            <h1 class="content-title">Compose</h1>
+            
+            <div class="col-md-12">
+
+                <div class="form-group">
+                    <input type="text" class="form-control" name="from-email" id="from-input" placeholder="From" />
+                </div>
+
+                <div class="form-group">
+                    <input type="text" class="form-control" name="to-email" id="to-input" placeholder="To" />
+                </div>
+
+                <div class="form-group">
+                    <input type="text" class="form-control" name="cc-email" id="cc-input" placeholder="Cc" />
+                </div>
+
+                <div class="form-group">
+                    <input type="text" class="form-control" name="bcc-email" id="bcc-input" placeholder="Bcc" />
+                </div>
+
+                <div class="form-group">
+                    <input type="text" class="form-control" name="subject" id="subject-input" placeholder="Subject" />
+                </div>
+
+                <div class="form-group">
+                    <textarea class="form-control" placeholder="Message" name="message" id="message-input"></textarea>
+                </div>
+
+                <div class="form-group">
+                    <button class="btn btn-success sendEmail">
+                        <span class="glyphicon glyphicon-send"></span> Send
+                    </button>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</form>
 {% endblock %}
