--- a/Email/templates/base.html
+++ b/Email/templates/base.html
@@ -10,6 +10,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="{{ static('css/bootstrap.min.css') }}">
+    <link rel="stylesheet" href="{{ static('css/bootstrap-select.min.css') }}">
     <link rel="stylesheet" href="{{ static('css/main.css') }}">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/jquery.bootstrapvalidator/0.5.2/css/bootstrapValidator.min.css"/>
 </head>
@@ -18,11 +19,30 @@
     {% block body %}
     {% endblock %}
 
+    <!-- Modal -->
+    <div class="modal fade" id="results-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                <h4 class="modal-title" id="myModalLabel">Results</h4>
+              </div>
+              <div class="modal-body">
+
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              </div>
+            </div>
+        </div>
+    </div>
+
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery.bootstrapvalidator/0.5.2/js/bootstrapValidator.min.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.2/backbone-min.js"></script>
     <script src="{{ static('js/vendors/bootstrap/bootstrap.min.js') }}"></script>
+    <script src="{{ static('js/vendors/bootstrap/bootstrap-select.min.js') }}"></script>
     <script src="{{ static('js/main.js') }}"></script>
 
 </body>
