--- a/Email/templates/index.html
+++ b/Email/templates/index.html
@@ -11,25 +11,16 @@
             </button>
         </div>
         <div class="collapse navbar-collapse" id="email-navbar-collapse-1">
+
             <div class="btn-group pull-left">
-                <button class="btn btn-info dropdown-toggle" type="button" data-toggle="dropdown">
-                    Email Service Options
-                    <span class="caret"></span>
-                </button>
-                <ul class="dropdown-menu" role="menu">
-                    <li role="presentation">
-                        <a role="menuitem" tabindex="-1" href="#">Random</a>
-                    </li>
-                    <li role="presentation">
-                        <a role="menuitem" tabindex="-1" href="#">Mandrill</a>
-                    </li>
-                    <li role="presentation">
-                        <a role="menuitem" tabindex="-1" href="#">SendGrid</a>
-                    </li>
-                    <li role="presentation">
-                        <a role="menuitem" tabindex="-1" href="#">SendGrid</a>
-                    </li>
-                </ul>
+                <select class="selectpicker" data-style="btn-primary" style="display: none;">
+                    <option value="1">Both Email Services</option>
+                    <option value="2">Manrill Only</option>
+                    <option value="3">SendGrid Only</option>
+                    <option value="4">Mandrill Failover to SendGrid</option>
+                    <option value="5">SendGrid Failover to Mandrill</option>
+                </select>
+
             </div>
         </div>
 
@@ -54,7 +45,7 @@
                 <div class="form-group">
                     <input type="text" class="form-control" name="cc-email" id="cc-input" placeholder="Cc" />
                 </div>
-
+        
                 <div class="form-group">
                     <input type="text" class="form-control" name="bcc-email" id="bcc-input" placeholder="Bcc" />
                 </div>
@@ -77,4 +68,5 @@
         </div>
     </div>
 </form>
+
 {% endblock %}
